--- a/genos-bank-account-command/pom.xml
+++ b/genos-bank-account-command/pom.xml
@@ -31,6 +31,18 @@
             <artifactId>spring-kafka</artifactId>
         </dependency>
 
+        <!--Internal-->
+        <dependency>
+            <groupId>com.victorskg</groupId>
+            <artifactId>cqrs-event-sourcing-core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.victorskg</groupId>
+            <artifactId>genos-bank-account-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <!--Others-->
         <dependency>
             <groupId>org.projectlombok</groupId>
