--- a/genos-bank-account-command/pom.xml
+++ b/genos-bank-account-command/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.13.4</version>
+        </dependency>
 
         <!--Test-->
         <dependency>
