--- a/genos-bank-account-command/src/main/resources/application.yml
+++ b/genos-bank-account-command/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
-    port: 5000
+    port: 5002
+    servlet:
+        context-path: /api
 
 spring:
     data:
@@ -7,8 +9,9 @@ spring:
             host: localhost
             port: 27017
             database: genos_bank
+            username: root
+            password: root
+            authentication-database: admin
     kafka:
         producer:
             bootstrap-servers: localhost:9092
-            key-serializer: org.apache.kafka.common.serialization.StringSerializer
-            value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
